--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,10 @@ sudo:
 dist:
   - trusty
 
+cache:
+  directories:
+    - .hunter
+
 matrix:
   include:
     # Linux {
@@ -97,6 +101,8 @@ install:
   # Installed if toolchain is Android (otherwise directory doesn't exist)
   - export ANDROID_NDK_r10e="`pwd`/_ci/android-ndk-r10e"
   - export ANDROID_NDK_r11c="`pwd`/_ci/android-ndk-r11c"
+
+  - export HUNTER_ROOT="`pwd`/.hunter"
 
 script:
   - >
