Make the build less verbose

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -60,5 +60,5 @@ install:
   - cmd: set HUNTER_ROOT=%cd%\hunter
 
 build_script:
-  - cmd: python %POLLY_ROOT%\bin\build.py --toolchain "%TOOLCHAIN%" --config "%CONFIG%" --verbose --test
+  - cmd: python %POLLY_ROOT%\bin\build.py --toolchain "%TOOLCHAIN%" --config "%CONFIG%" --test
 
