Install necessary packages on CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,13 @@ cache:
   directories:
     - .hunter
 
+addons:
+  apt:
+    packages:
+      - valgrind
+      - libc6-dev
+      - libc++-dev
+
 matrix:
   include:
     # Linux {
