Only test on platform with predefined toolchain by polly

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,6 @@ addons:
       - libc6-dev
       - libc++-dev
 
-osx_image: xcode8.3
-
 matrix:
   include:
     # Linux {
@@ -36,7 +34,17 @@ matrix:
     - os: osx
       env: CONFIG=Debug TOOLCHAIN=osx-10-12
     - os: osx
-      env: CONFIG=Debug TOOLCHAIN=ios-nocodesign-10-3
+      osx_image: xcode7.3
+      env: CONFIG=Debug TOOLCHAIN=ios-nocodesign-9.3
+    - os: osx
+      osx_image: xcode8
+      env: CONFIG=Debug TOOLCHAIN=ios-nocodesign-10-0
+    - os: osx
+      osx_image: xcode8.1
+      env: CONFIG=Debug TOOLCHAIN=ios-nocodesign-10-1
+    - os: osx
+      osx_image: xcode8.2
+      env: CONFIG=Debug TOOLCHAIN=ios-nocodesign-10-2
 
 install:
   # Info about OS
