--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ matrix:
     - os: osx
       env: CONFIG=Debug TOOLCHAIN=clang-libstdcxx
     - os: osx
+      osx_image: xcode8.2
       env: CONFIG=Debug TOOLCHAIN=osx-10-12
     - os: osx
       osx_image: xcode7.3
