--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ matrix:
       env: CONFIG=Debug TOOLCHAIN=osx-10-12
     - os: osx
       osx_image: xcode7.3
-      env: CONFIG=Debug TOOLCHAIN=ios-nocodesign-9.3
+      env: CONFIG=Debug TOOLCHAIN=ios-nocodesign-9-3
     - os: osx
       osx_image: xcode8
       env: CONFIG=Debug TOOLCHAIN=ios-nocodesign-10-0
