--- a/.travis.yml
+++ b/.travis.yml
@@ -90,6 +90,7 @@ script:
     --toolchain ${TOOLCHAIN}
     --config ${CONFIG}
     --test
+    --verbose
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
