--- a/appveyor.yml
+++ b/appveyor.yml
@@ -59,3 +59,6 @@ install:
 
   - cmd: set HUNTER_ROOT=%cd%\hunter
 
+build_script:
+  - cmd: python %POLLY_ROOT%\bin\build.py --toolchain "%TOOLCHAIN%" --config "%CONFIG%" --test
+
