Test for VS 2017

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,6 +14,9 @@ environment:
     - TOOLCHAIN: "vs-14-2015"
       CONFIG: Debug
 
+    - TOOLCHAIN: "vs-15-2017"
+      CONFIG: Debug
+
 cache:
   - hunter
 
