--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,18 +3,23 @@
 environment:
   matrix:
     - TOOLCHAIN: "vs-12-2013-win64"
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2013
       CONFIG: Debug
 
     - TOOLCHAIN: "vs-12-2013-xp"
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2013
       CONFIG: Debug
 
     - TOOLCHAIN: "vs-12-2013"
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2013
       CONFIG: Debug
 
     - TOOLCHAIN: "vs-14-2015"
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
       CONFIG: Debug
 
     - TOOLCHAIN: "vs-15-2017"
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       CONFIG: Debug
 
 cache:
