--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,16 @@ matrix:
       env: CONFIG=Coverage TOOLCHAIN=clang-libstdcxx
     - os: linux
       env: CONFIG=Coverage TOOLCHAIN=gcc
+    - os: linux
+      env: CONFIG=Coverage TOOLCHAIN=android-ndk-r10e-api-19-armeabi-v7a-neon
+    - os: linux
+      env: CONFIG=Coverage TOOLCHAIN=android-ndk-r11c-api-19-armeabi-v7a-neon
+    # - os: linux
+    #   env: CONFIG=Coverage TOOLCHAIN=android-ndk-r12b-api-19-armeabi-v7a-neon
+    # - os: linux
+    #   env: CONFIG=Coverage TOOLCHAIN=android-ndk-r13b-api-19-armeabi-v7a-neon
+    # - os: linux
+    #   env: CONFIG=Coverage TOOLCHAIN=android-ndk-r14-api-19-armeabi-v7a-neon-c11
 
     # OSX {
     - os: osx
