Revert "Do not build for XP"
This reverts commit c5bfbd2d73253197e09bea9021063ddb7f75cc67.

  #	modified:   appveyor.yml

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,6 +6,10 @@ environment:
       APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2013
       CONFIG: Debug
 
+    - TOOLCHAIN: "vs-12-2013-xp"
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2013
+      CONFIG: Debug
+
     - TOOLCHAIN: "vs-12-2013"
       APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2013
       CONFIG: Debug
