--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,7 +56,8 @@ hunter_add_package(Boost)
 find_package(Boost CONFIG REQUIRED)
 
 set(SOURCES
-  src/stream_coder/stream_coder_manager.cc
+  src/stream_coder/error.cc
+  src/stream_coder/stream_processor.cc
   src/stream_coder/detail/stream_coder_manager.cc
   src/deps/easylogging++.cc
   )
