Set up Sugar correctly

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,2 +1,5 @@
 hunter_add_package(GTest)
-find_package(GTest CONFIG REQUIRED)
+find_package(GMock CONFIG REQUIRED)
+
+include(../cmake/Sugar)
+include(sugar_add_gtest)
