Pop error on CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -96,7 +96,7 @@ install:
 
 script:
   - |-
-    build.py --toolchain ${TOOLCHAIN} --config ${CONFIG} --test --verbose | grep '^--\|^=='
+    set -e && build.py --toolchain ${TOOLCHAIN} --config ${CONFIG} --test --verbose | grep '^--\|^=='
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
