Do not test on android

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -13,7 +13,7 @@ function(add_mem_test name)
     message(STATUS "Adding valgrind test for ${name}.")
     set(MEMCHECK_PARAMS ${CTEST_MEMORYCHECK_COMMAND} ${CTEST_MEMORYCHECK_COMMAND_OPTIONS} $<TARGET_FILE:${name}>)
     add_test(NAME ${name} COMMAND ${MEMCHECK_PARAMS})
-  else()
+  elseif(NOT ANDROID)
     message(STATUS "Adding test for ${name}.")
     sugar_add_gtest(${name} ${name})
   endif()
