--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,9 @@ matrix:
 
     - os: osx
       osx_image: xcode8.2
+      env: CONFIG=Debug TOOLCHAIN=clang COVERAGE=ON
+    - os: osx
+      osx_image: xcode8.2
       env: CONFIG=Debug TOOLCHAIN=osx-10-12 COVERAGE=ON
     - os: osx
       osx_image: xcode7.3
