--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ matrix:
 
     - os: osx
       osx_image: xcode8.2
-      env: CONFIG=Debug TOOLCHAIN=clang COVERAGE=ON
+      env: CONFIG=Debug TOOLCHAIN=default COVERAGE=ON
     - os: osx
       osx_image: xcode8.2
       env: CONFIG=Debug TOOLCHAIN=osx-10-12 COVERAGE=ON
