--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -14,7 +14,7 @@ function(add_mem_test name)
     message(STATUS "Adding valgrind test for ${name}.")
     set(MEMCHECK_PARAMS ${CTEST_MEMORYCHECK_COMMAND} ${CTEST_MEMORYCHECK_COMMAND_OPTIONS} $<TARGET_FILE:${name}>)
     add_test(NAME ${name} COMMAND ${MEMCHECK_PARAMS})
-  elseif(NOT ANDROID)
+  elseif(NOT ANDROID AND NOT IOS)
     message(STATUS "Adding test for ${name}.")
     sugar_add_gtest(${name} ${name})
   endif()
