--- a/.travis.yml
+++ b/.travis.yml
@@ -37,9 +37,10 @@ matrix:
     - os: osx
       osx_image: xcode8.2
       env: CONFIG=Debug TOOLCHAIN=osx-10-12 COVERAGE=ON
-    - os: osx
-      osx_image: xcode7.3
-      env: CONFIG=Debug TOOLCHAIN=ios-nocodesign-9-3 
+      # xcode 7.3 provides a too old libc++ that has some bugs with shared_ptr, but it does not mean iOS 9.x is not supported.
+    # - os: osx
+    #   osx_image: xcode7.3
+    #   env: CONFIG=Debug TOOLCHAIN=ios-nocodesign-9-3 
     - os: osx
       osx_image: xcode8
       env: CONFIG=Debug TOOLCHAIN=ios-nocodesign-10-0
