--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,6 +58,7 @@ find_package(Boost CONFIG REQUIRED)
 
 set(SOURCES
   src/stream_coder/stream_coder_pipe.cc
+  src/stream_coder/socks5_stream_coder_session.cc
   src/deps/easylogging++.cc
   src/utils/buffer.cc
   src/utils/boost_tcp_socket.cc
