--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,9 +1,11 @@
-hunter_add_package(GTest)
-find_package(GMock CONFIG REQUIRED)
+list(APPEND CMAKE_LIBRARY_PATH "../deps/${PLATFORM}/lib")
 
-set(SUGAR_ROOT ../sugar)
-include(${SUGAR_ROOT}/cmake/Sugar)
-include(sugar_add_gtest)
+find_library(GTEST gtest NO_SYSTEM_ENVIROMENT_PATH)
+find_library(GMOCK gmock NO_SYSTEM_ENVIROMENT_PATH)
+find_library(GMOCK_MAIN gmock_main NO_SYSTEM_ENVIROMENT_PATH)
+if(NOT GMOCK_MAIN OR NOT GMOCK OR NOT GTEST)
+  message(FATAL_ERROR "GoogleTest not found. Build dependency first.")
+endif()
 
 option(NE_ENABLE_MEMCHECK "Enable valgrind when running tests." ON)
 find_program(CTEST_MEMORYCHECK_COMMAND valgrind)
@@ -16,20 +18,20 @@ function(add_mem_test name)
     add_test(NAME ${name} COMMAND ${MEMCHECK_PARAMS})
   elseif(NOT ANDROID AND NOT IOS)
     message(STATUS "Adding test for ${name}.")
-    sugar_add_gtest(${name} ${name})
+    add_test(${name} ${name})
   endif()
 endfunction()
 
 include_directories(.)
 
 add_executable(stream_coder_pipe_test stream_coder_pipe_test.cc)
-target_link_libraries(stream_coder_pipe_test nekit GMock::main)
+target_link_libraries(stream_coder_pipe_test nekit ${GTEST} ${GMOCK} ${GMOCK_MAIN})
 add_mem_test(stream_coder_pipe_test)
 
 add_executable(buffer_test buffer_test.cc)
-target_link_libraries(buffer_test nekit GMock::main)
+target_link_libraries(buffer_test nekit ${GTEST} ${GMOCK} ${GMOCK_MAIN})
 add_mem_test(buffer_test)
 
 add_executable(socks5_stream_coder_session_test socks5_stream_coder_session_test.cc)
-target_link_libraries(socks5_stream_coder_session_test nekit GMock::main)
+target_link_libraries(socks5_stream_coder_session_test nekit ${GTEST} ${GMOCK} ${GMOCK_MAIN})
 add_mem_test(socks5_stream_coder_session_test)
