FEAT: Convert boost asio error to equivalent std error

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,6 +61,7 @@ set(SOURCES
   src/stream_coder/stream_coder_pipe.cc
   src/stream_coder/socks5_server_stream_coder.cc
   src/transport/tcp_socket.cc
+  src/utils/boost_error.cc
   )
 
 add_library(nekit ${SOURCES})
