FEAT: Add primitive resolve architecture

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,6 +63,7 @@ set(SOURCES
   src/transport/tcp_socket.cc
   src/transport/tcp_listener.cc
   src/utils/boost_error.cc
+  src/utils/session.cc
   )
 
 add_library(nekit ${SOURCES})
