--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,6 +66,7 @@ set(SOURCES
   src/utils/boost_error.cc
   src/utils/session.cc
   src/utils/system_resolver.cc
+  src/utils/no_error.cc
   src/rule/rule_set.cc
   )
 
