--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,7 @@ set(SOURCES
   src/utils/no_error.cc
   src/utils/runtime.cc
   src/rule/rule_set.cc
+  src/rule/all_rule.cc
   src/transport/socks5_listener.cc
   )
 
