--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -16,11 +16,11 @@ find_program(CTEST_MEMORYCHECK_COMMAND valgrind)
 set(CTEST_MEMORYCHECK_COMMAND_OPTIONS --trace-children=yes --leak-check=full)
 
 function(add_mem_test name)
-  if (CTEST_MEMORYCHECK_COMMAND AND NE_ENABLE_MEMCHECK AND NOT APPLE AND NOT ANDROID)
+  if (CTEST_MEMORYCHECK_COMMAND AND NE_ENABLE_MEMCHECK)
     message(STATUS "Adding valgrind test for ${name}.")
     set(MEMCHECK_PARAMS ${CTEST_MEMORYCHECK_COMMAND} ${CTEST_MEMORYCHECK_COMMAND_OPTIONS} $<TARGET_FILE:${name}>)
     add_test(NAME ${name} COMMAND ${MEMCHECK_PARAMS})
-  elseif(NOT ANDROID AND NOT IOS)
+  elseif()
     message(STATUS "Adding test for ${name}.")
     add_test(${name} ${name})
   endif()
